--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-doctoc": "^0.1.4",
     "gulp-markdown": "^1.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.1.2",
     "gulp-zip": "^4.0.0"
   }
 }
